--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mishka",
+  "name": "MyProjectName",
   "version": "0.1.0",
   "private": true,
-  "description": "Личный проект «Мишка» от HTML Academy",
+  "description": "My WP Project Name Description",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "6.7.x",
@@ -10,6 +10,7 @@
     "css-mqpacker": "^6.0.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-cheerio": "^0.6.3",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.3.0",
@@ -39,5 +40,8 @@
   ],
   "engines": {
     "node": "6.10"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0"
   }
 }
